updates responsive design with hamburger menu and corrects grid overpacking on mobile screens

--- a/styles.css
+++ b/styles.css
@@ -13,9 +13,11 @@
 body {
 	margin:0 0 0 0;
 	padding:80 80 20 80;
-	display:grid;
+	/* 
+display:grid;
 	grid-template-rows: 320px 500px 600px 200px;
 	grid-template-cols: 100%;
+ */
 }
 
 h1 {
@@ -23,7 +25,7 @@ h1 {
 	font-size:100px;
 	margin-bottom:-40px;
 	margin-top:0px;
-	text-align:center;
+	text-align:left;
 }
 
 h2 {
@@ -38,14 +40,14 @@ h4 {
 	font-size:34px;
 	font-style:italic;
 	font-weight:lighter;
-	text-align:center;
+	text-align:left;
 	padding-left:0px;
 }
 
 h6 {
 	font-family:dr;
 	color:gray;
-	font-size:24px;
+	font-size:20px;
 	font-weight:lighter;
 }
 
@@ -68,38 +70,50 @@ a:hover {
 	grid-rows:1;
 	grid-columns:1;
 	padding-top:40px;
-	padding-left:0px;
+	padding-left:40px;
 	padding-bottom:40px;
 
 }
 
 #menu {
 	
-	position:absolute;
-	right:100;
-	top:60;
-	padding-top:40px;
-	padding-right:40px;
-	width:240px;
+	position:fixed;
+	right:90;
+	top:160;
+	padding-top:0px;
+	padding-right:0px;
+	width:140px;
 	display:grid;
-	grid-template-columns: 70px 100px 70px;
-	grid-template-rows: 100%;	
+	grid-template-columns: 100%;
+	grid-template-rows: 80px 80px 80px;
+
 }
 
-#menu *{
+#menu img{
+
+	margin-left:-20px;
+	margin-top:-120px;
+	width:240px;
+	height:240px;
+}
+
+#menu div{
 	display:none;
+	background:white;
 	font-family:dr;
+	font-size:1.8em;
 	text-align:center;
 }
-#m1{grid-columns:1;border-right:lightgray 1px solid;}
-#m2{grid-columns:2;border-right:lightgray 1px solid;}
-#m3{grid-columns:3;}
+#m1{grid-rows:1;grid-columns:1;}
+#m2{grid-rows:2;grid-columns:1;}
+#m3{grid-rows:3;grid-columns:1;}
 
 #about {
 	grid-rows:2;
 	grid-columns:1;
 	padding-left:40px;
 	padding-right:40px;
+	padding-bottom:40px;
 }
 
 #experience {
@@ -107,6 +121,7 @@ a:hover {
 	grid-columns:1;
 	padding-left:40px;
 	padding-right:40px;
+	padding-bottom:40px;
 }
 
 #contact {
@@ -212,21 +227,27 @@ a:hover {
 		grid-template-columns: 70px 100px 70px;
 		grid-template-rows: 100%;	
 	}
+	
+	#menu img{
+		display:none;
+	}
 
-	#menu *{
+	#menu div{
 		display:block;
 		font-family:dr;
+		font-size:1em;
 		text-align:center;
 	}
-	#m1{grid-columns:1;border-right:lightgray 1px solid;}
-	#m2{grid-columns:2;border-right:lightgray 1px solid;}
-	#m3{grid-columns:3;}
+	#m1{grid-columns:1;grid-rows:1;border-right:lightgray 1px solid;}
+	#m2{grid-columns:2;grid-rows:1;border-right:lightgray 1px solid;}
+	#m3{grid-columns:3;grid-rows:1;}
 
 	#about {
 		grid-rows:2;
 		grid-columns:1;
 		padding-left:40px;
 		padding-right:240px;
+		padding-bottom:0px;
 	}
 
 	#experience {
@@ -234,6 +255,7 @@ a:hover {
 		grid-columns:1;
 		padding-left:40px;
 		padding-right:240px;
+		padding-bottom:0px;
 	}
 
 	#contact {
